fix: header z-index

--- a/src/components/Layout/Header/Header.module.sass
+++ b/src/components/Layout/Header/Header.module.sass
@@ -23,10 +23,8 @@
     &_active
       background: #1F1B2E
 
-
   &__dropdown
     position: relative
-    z-index: 2
 
     &-enter
       opacity: 0
